<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">中大易车宝</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="action_about_us">关于我们</string>
	<string name="login">登陆</string>
	<string name="register">注册</string>
	<string name="account">账号</string>
	<string name="password">密码</string>
	<string name="username">用户</string>
	<string name="please_input_username">请输入用户名</string>
	<string name="please_input_account">请输入账号</string>
	<string name="please_input_password">请输入密码</string>
	<string name="password_cannot_be_empty">密码不能为空</string>
	<string name="account_cannot_be_empty">账号不能为空</string>
	<string name="username_cannot_be_empty">用户名不能为空</string>
	<string name="please_confirm_password">请再次输入密码</string>
	<string name="error_password_no_the_same">前后密码不一致</string>
	<string name="error_user_name_cannot_longer_than_14">名字不能多于14个字符</string>
	<string name="error_account_or_password_wrong">账号或者密码错误</string>
	<string name="default_date">2015.5.20</string>
	<string name="label">标签</string>
	<string name="labels">我是标签 | 我也是标签 | 真巧我也是 | 大家一起来出售二手单车吧 | 儿童 </string>
	<string name="comment">评论</string>
	<string name="default_book_name">凤凰牌</string>
	<string name="default_book_introduce">迷你山地车</string>
	<string name="default_long_book_introduce">9成新的单车</string>

	<string-array name="nav_drawer_items">
		<item>首页</item>
		<item>发布</item>
		<item>搜索</item>
		<item>退出</item>
	</string-array>

	<array name="nav_drawer_icons">
		<item>@drawable/ic_drawer_home</item>
		<item>@drawable/ic_drawer_new</item>
		<item>@drawable/ic_drawer_search</item>
		<item>@drawable/ic_drawer_logout</item>
	</array>

	<string-array name="search_condition">
		<item>品牌</item>
		<item>标签</item>
	</string-array>

	<string name="default_comment">默认评论</string>
	<string name="default_comment_time">2015.6.1</string>
	<string name="default_user_name">单车</string>
	<string name="default_user_join_time">2015.6.1</string>
	<string name="drawer_icon">drawer_icon</string>
	<string name="default_drawer_text">默认</string>
	<string name="text_or_lable">单车品牌或者标签</string>
	<string name="upload">上传</string>
	<string name="confirm">确认</string>
	<string name="upload_photo">上传照片</string>
	<string name="add_label">添加标签</string>
	<string name="book_name">单车品牌</string>
	<string name="add_book_name">添加单车品牌</string>
	<string name="add_introduce">添加描述</string>
	<string name="add_label_hint">添加标签，以空格隔开</string>
	<string name="add_introduce_hint">添加单车描述</string>
	<string name="quit">退出</string>
	<string name="cancel">取消</string>
	<string name="ask_is_quit">是否退出</string>
	<string name="book_have_been_upload">要出手的单车</string>
	<string name="user_join_time_comma">加入时间：</string>
	<string name="user_name_comma">用户名：</string>
	<string name="no_match_result">无匹配结果</string>
	<string name="loading">加载中</string>
	<string name="book_has_been_publish">要出手的单车</string>

</resources>